[codex] Optimize SHAFT performance hot paths (#2913)
Optimize SHAFT performance hot paths